--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,10 +5,52 @@
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'application', 'http://fonts.googleapis.com/css?family=Raleway:400,700' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <%= yield %>
+    <div id="sidebar">
+      <div id="logo">
+        <%= link_to root_path do %>
+          <%= image_tag "logo.svg" %>
+        <% end %>
+      </div>
+
+      <ul>
+        <li class="category">Website</li>
+        <li><%= link_to 'Blog', root_path %></li>
+        <li>About</li>
+      </ul>
+
+      <ul>
+        <li class="category">Social</li>
+        <li><a href="https://twitter.com/hMt_y">Twitter</a></li>
+        <li><a href="https://www.instagram.com/hamit_yay">Instagram</a></li>
+        <li><a href="https://github.com/hamityay">GitHub</a></li>
+        <li><a href="mailto:hamityay@hotmail.com">Email</a></li>
+      </ul>
+
+      <p class="sign_in">Admin Login </p>
+    </div>
+
+    <div id="main_content">
+      <div id="header">
+        <p> All posts </p>
+
+        <div class="buttons">
+          <button class="button"><%= link_to "New Post", new_post_path %></button>
+          <button class="button">Log Out</button>
+        </div>
+      </div>
+
+      <% flash.each do |name, msg| %>
+        <%= content_tag(:div, msg, class:"alert") %>
+      <% end %>
+
+      <%= yield %>
+    </div>
+
+
   </body>
 </html>
