--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -3,6 +3,18 @@
   <h1> New Post </h1>
 
   <%= form_for :post, url: posts_path do |f| %>
+
+    <% if @post.errors.any? %>
+      <div id="erors">
+        <h2><%= pluralize(@post.errors.count, "error") %> prevented thid post from saving </h2>
+        <ul>
+          <% @post.errors.full_messages.each do |msg| %>
+            <li><%= msg %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+
     <p>
       <%= f.label :title %><br>
       <%= f.text_field :title, placeholder: 'title' %></p>
