--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -4,8 +4,9 @@
 		<p class="comment_body"><%= comment.body %></p>
 		<p class="comment_time"><%= time_ago_in_words(comment.created_at) %> Ago</p>
 	</div>
-
-  <%= link_to 'Delete', [comment.post, comment], method: :delete,
-                  class: "button",
-                  data: { confirm: 'Are you sure? ' } %>
+	<% if (user_signed_in? and comment.user_id == current_user.id) or (user_signed_in? and current_user.email == 'hamityay@hotmail.com') %>
+	  <p><%= link_to 'Delete', [comment.post, comment], method: :delete,
+	                  class: "button",
+	                  data: { confirm: 'Are you sure? ' } %></p>
+	<% end %>
 </div>
