--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,8 +47,18 @@
 
         <% if user_signed_in? %>
           <div class="buttons">
-            <button class="button"><%= link_to "New Post", new_post_path %></button>
-            <button class="button">Log Out</button>
+
+              <%= link_to 'New Post', new_post_path %> |
+              <%= link_to 'Log Out', destroy_user_session_path, method: :delete %>
+
+          </div>
+
+        <% else %>
+          <div class="buttons">
+
+              <%= link_to 'Log In', new_user_session_path %> |
+              <%= link_to 'Sign Up', new_user_registration_path %>
+
           </div>
         <% end %>
       </div>
