--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,8 +6,10 @@
 
   <p class="date">
     Submitted <%= time_ago_in_words(@post.created_at) %> Ago
-    |  <%= link_to 'Edit', edit_post_path %>
-    |  <%= link_to 'Delete',post_path(@post), method: :delete, data: { confirm: 'Are you sure? ' } %>
+    <% if (user_signed_in? and @post.user_id == current_user.id) or (user_signed_in? and current_user.email == 'hamityay@hotmail.com') %>
+      |  <%= link_to 'Edit', edit_post_path %>
+      |  <%= link_to 'Delete',post_path(@post), method: :delete, data: { confirm: 'Are you sure? ' } %>
+    <% end %>
   </p>
 
   <p class="body">
